# Degradation-Aware-Particle-Filter-for-Robot-Localization

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: amcl_params.yaml  distance_map.npy  joint_names_rover.yaml  map.pgm  map.yaml  marker_positions.yaml
launch/: amcl.launch.py  display.launch.py  gazebo.launch.py
meshes/: base_link.STL  castor_wheel.STL  left_wheel.STL  right_wheel.STL
models/aruco_marker_0/: model.config  model.sdf
models/aruco_marker_1/: model.config  model.sdf
models/aruco_marker_10/: model.config  model.sdf
models/aruco_marker_11/: model.config  model.sdf
models/aruco_marker_12/: model.config  model.sdf
models/aruco_marker_13/: model.config  model.sdf
models/aruco_marker_14/: model.config  model.sdf
models/aruco_marker_15/: model.config  model.sdf
models/aruco_marker_2/: model.config  model.sdf
models/aruco_marker_3/: model.config  model.sdf
models/aruco_marker_4/: model.config  model.sdf
models/aruco_marker_5/: model.config  model.sdf
models/aruco_marker_6/: model.config  model.sdf
models/aruco_marker_7/: model.config  model.sdf
models/aruco_marker_8/: model.config  model.sdf
models/aruco_marker_9/: model.config  model.sdf
scripts/: camera_degradation_node.py  confidence_monitor_node.py  evaluate_results.py  generate_aruco_markers.py  generate_occupancy_map.py  lidar_degradation_node.py  odom_tf_publisher.py  particle_filter_node.py  plot_particles.py  run_experiment.sh  ultrasonic_degradation_node.py
urdf/: rover.urdf.xacro
worlds/: indoor_arena.sdf
